add new features
add dialog message with Buttons

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
         <ul class="deck"> </ul>
     </div>
 
+    <dialog id ="dialogMessge">
+        
+        <p class = "pMessage"></p>
+        <Button id="yesButton">yes</Button>
+        <button id="noButton">No , thanks</button>
+    </dialog>
+
     <script src="js/app.js"></script>
 </body>
 </html>
